--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,13 +1,13 @@
-# Nome da Actions:  
+# Nome da Actions:
 name: Snake Game
 
-# Controlador do tempo que sera feito a atualização dos arquivos.
+# Controlador do tempo que será feita a atualização dos arquivos.
 on:
   schedule:
-      # Será atualizado a cada 5 horas.
+    # Será atualizado a cada 5 horas.
     - cron: "0 */5 * * *"
 
-# Permite executar na na lista de Actions (utilizado para testes de build).
+# Permite executar na lista de Actions (utilizado para testes de build).
   workflow_dispatch:
 
 # Regras
@@ -16,31 +16,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2
+    # Checa o repositório sob $GITHUB_WORKSHOP, assim seu trabalho pode acessá-lo
+    - uses: actions/checkout@v2
 
-    # Repositorio que será utilizado para gerar os arquivos.
-      - uses: Platane/snk@master
-        id: snake-gif
-        with:
-          github_user_name: DanielZD31
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+    # Repositório que será utilizado para gerar os arquivos.
+    - name: Generate Snake GIF
+      uses: Platane/snk@master
+      id: snake-gif
+      with:
+        github_user_name: DanielZD31
+        gif_out_path: dist/github-contribution-grid-snake.gif
+        svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - run: git status
+    - run: git status
 
-      # Para as atualizações.
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
+    # Faz as atualizações.
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: master
+        force: true
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          # the output branch we mentioned above
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Deploy to GitHub Pages
+      uses: crazy-max/ghaction-github-pages@v2.1.3
+      with:
+        # a branch de saída que mencionamos acima
+        target_branch: gh-pages
+        build_dir: dist
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
